# pheasant

./: .coverage  .coveragerc  .gitignore  .travis.yml  LICENSE  MANIFEST.in  Pipfile  README.md  Untitled.ipynb  appveyor.yml  mkdocs.yml  pyproject.toml  setup.cfg  setup.py
.ropeproject/: config.py
custom_theme/: main.html
docs/: .pheasant-number.json  index.md  mkdocs.yml  pheasant.yml
docs/about/: license.md  release-notes.md
docs/css/: extra.css
docs/docs/: api.py  bokeh.md  code.md  holoviews.md  image.md  images.md  index.md  latex.md  markdown_stream_input.md  matplotlib.md  table.md  test.md  test2.md
docs/scripts/: example.py  hello.py
docs/site/: 404.html  index.html  sitemap.xml
docs/user-guide/: cell.py  embed.md  images.md  kernel.md  script.py  sympy.md
pheasant/: __init__.py  config.py  converters.py  core.py  main.py  utils.py
pheasant/app/: app.py
pheasant/code/: __init__.py  config.py  config.yml  converter.py  fenced.py  hilite.py  html.py  inspect.py  renderer.py
pheasant/core/: array.py  base.py  client.py  config.py  convert.py  converter.py  decorator.py  jupyter.py  markdown.py  notebook.py  page.py  parser.py  pheasant.py  progress.py  renderer.py  renderers.py
pheasant/debug/: converter.py
pheasant/embed/: renderer.py
pheasant/jupyter/: __init__.py  altair.py  cache.py  client.py  common.py  config.py  config.yml  convert.py  converter.py  display.py  exporter.py  inline.py  markdown.py  notebook.py  preprocess.py  renderer.py
pheasant/latex/: array.py
pheasant/macro/: __init__.py  config.py  converter.py
pheasant/markdown/: __init__.py  config.py  convert.py  converter.py  splitter.py
pheasant/mkdocs/: defaults.py  full.py  plugin.py
pheasant/number/: __init__.py  client.py  code.py  config.py  config.yml  converter.py  header.py  markdown.py  reference.py  renderer.py
pheasant/office/: common.py  config.py  converter.py  excel.py  powerpoint.py
pheasant/plugins/: mkdocs.py  pelican.py
pheasant/powerpoint/: __init__.py  format.py  main.py  style.py  table.py  utils.py
pheasant/python/: formatter.py  renderer.py
pheasant/script/: __init__.py  config.py  converter.py  formatter.py  renderer.py  splitter.py
pheasant/static/: pheasant.css
pheasant/templates/: markdown.jinja2
pheasant/theme/: main.html  pheasant.yml
pheasant/utils/: cache.py  latex.py  progress.py  time.py
site/: 404.html  index.html  search.html  sitemap.xml
site/css/: pheasant.css  theme.css
site/js/: pheasant.js  theme.js
site/search/: search_index.json
src/pheasant/: __init__.py
src_old/pheasant/: main.py
tests/: test_converter_jupyter.py  test_main.py
tests/code/: conftest.py  test_code.py  test_code_converter.py  test_code_fenced.py  test_code_fenced_code.py  test_code_html.py  test_code_inline_code.py  test_code_inspect.py  test_code_parse_fenced_code.py  test_code_parse_inline_code.py  test_code_renderer.py  test_converter.py  test_fenced_code.py  test_html.py  test_inspect.py  test_parse_fenced_code.py
tests/core/: conftest.py  test_client.py  test_converter.py  test_core_base.py  test_core_cell_class.py  test_core_context_and_cell_class.py  test_core_converter.py  test_core_decorate.py  test_core_group_and_context_class.py  test_core_name.py  test_core_parse.py  test_core_parser.py  test_core_pheasant.py  test_core_renderers.py  test_core_split.py  test_core_split_and_parse.py  test_jupyter.py  test_markdown_stream.py  test_notebook_stream.py  test_parser.py  test_str.py
tests/docs/: mkdocs.yml
tests/embed/: conftest.py  test_code_parse_inline_code.py  test_embed_fenced_code.py  test_embed_inline_code.py  test_embed_parse_fenced_code.py  (+2 more)
tests_old/: test_main.py
(+305 files in other folders)
